# Gene_Ontology

./: README.md  pyproject.toml
Gene_Ontology/src/: get_top_go_classes.py
